Quark: also display error stream in Jadx log